--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+       
         "start": "webpack serve --env port=3000",
-        "start:vite": "vite",
-        "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
-        "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
-        "start:dev:server": "node ./json-server/index.js",
-        "build:prod": "webpack  --env mode=production",
-        "build:dev": "webpack  --env mode=development",
+        "dev": "vite dev",
+        "build": "npm run build:prod",
+        "build:prod": "webpack --env mode=production",
+        "build:dev": "webpack --env mode=development",
         "prettier": "npx prettier --write **/*.{ts,tsx,json}",
         "lint:ts": "eslint \"./src/**/*.{ts,tsx}\"",
         "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
